2004-04-15  Tor Lillqvist  <tml@iki.fi>
	* libgimpthumb/Makefile.am: For Win32, install gimpthumb.def, like
	the .def files of the other libgimp* libs.

	* app/Makefile.am (INCLUDES): Add PANGOFT2_CFLAGS.

	* gimp-zip.in: Put also libgimpthumb in the developer package.


git-svn-id: http://svn.gnome.org/svn/gimp/trunk@12971 f57ce169-c725-0410-9505-c4955b3f21d2

--- a/app/Makefile.am
+++ b/app/Makefile.am
@@ -71,6 +71,7 @@ AM_CPPFLAGS = \
 INCLUDES = \
 	-I$(top_srcdir)	\
 	$(GTK_CFLAGS)	\
+	$(PANGOFT2_CFLAGS) \
 	-I$(includedir)
 
 gimp_2_0_LDFLAGS = \
