2004-04-16  Michael Natterer  <mitch@gimp.org>
	* app/core/gimpmarshal.list: new marshaller VOID:STRING

	* app/widgets/Makefile.am
	* app/widgets/widgets-types.h
	* app/widgets/gimpactiongroup.[ch]
	* app/widgets/gimpenumaction.[ch]
	* app/widgets/gimpstringaction.[ch]: added some completely unused
	GtkAction infrastructure.


git-svn-id: http://svn.gnome.org/svn/gimp/trunk@12976 f57ce169-c725-0410-9505-c4955b3f21d2

--- a/app/widgets/Makefile.am
+++ b/app/widgets/Makefile.am
@@ -19,6 +19,8 @@ noinst_LIBRARIES = libappwidgets.a
 libappwidgets_a_sources = \
 	widgets-enums.h			\
 	widgets-types.h			\
+	gimpactiongroup.c		\
+	gimpactiongroup.h		\
 	gimpbrusheditor.c		\
 	gimpbrusheditor.h		\
 	gimpbrushfactoryview.c		\
@@ -95,6 +97,8 @@ libappwidgets_a_sources = \
 	gimpdrawabletreeview.h		\
 	gimpeditor.c			\
 	gimpeditor.h			\
+	gimpenumaction.c		\
+	gimpenumaction.h		\
 	gimpenummenu.c			\
 	gimpenummenu.h			\
 	gimperrorconsole.c		\
@@ -166,6 +170,8 @@ libappwidgets_a_sources = \
 	gimpselectioneditor.h		\
 	gimpsessioninfo.c		\
 	gimpsessioninfo.h		\
+	gimpstringaction.c		\
+	gimpstringaction.h		\
 	gimpstrokeeditor.c		\
 	gimpstrokeeditor.h		\
 	gimptemplateeditor.c		\
