2004-04-18  Sven Neumann  <sven@gimp.org>
	* app/widgets/Makefile.am
	* app/widgets/widgets-types.h
	* app/widgets/gimpenumstore.[ch]: added (yet unused) GimpEnumStore,
	a GtkListStore for enum values.


git-svn-id: http://svn.gnome.org/svn/gimp/trunk@13000 f57ce169-c725-0410-9505-c4955b3f21d2

--- a/app/widgets/Makefile.am
+++ b/app/widgets/Makefile.am
@@ -101,6 +101,8 @@ libappwidgets_a_sources = \
 	gimpenumaction.h		\
 	gimpenummenu.c			\
 	gimpenummenu.h			\
+	gimpenumstore.c			\
+	gimpenumstore.h			\
 	gimperrorconsole.c		\
 	gimperrorconsole.h		\
 	gimpfiledialog.c		\
