2004-04-19  Michael Natterer  <mitch@gimp.org>
	* menus/toolbox-menu.xml: added the toolbox menu.


git-svn-id: http://svn.gnome.org/svn/gimp/trunk@13016 f57ce169-c725-0410-9505-c4955b3f21d2

--- a/menus/Makefile.am
+++ b/menus/Makefile.am
@@ -20,6 +20,7 @@ menudata_DATA = \
 	patterns-menu.xml		\
 	qmask-menu.xml			\
 	templates-menu.xml		\
+	toolbox-menu.xml		\
 	vectors-menu.xml
 
 EXTRA_DIST = $(menudata_DATA)
