2004-04-19  Michael Natterer  <mitch@gimp.org>
	* app/actions/Makefile.am
	* app/actions/actions-types.h: oops, forgot to commit this one.


git-svn-id: http://svn.gnome.org/svn/gimp/trunk@13018 f57ce169-c725-0410-9505-c4955b3f21d2

--- a/app/actions/Makefile.am
+++ b/app/actions/Makefile.am
@@ -3,6 +3,8 @@
 noinst_LIBRARIES = libappactions.a
 
 libappactions_a_SOURCES = \
+	actions-types.h			\
+	\
 	brushes-actions.c		\
 	brushes-actions.h		\
 	buffers-actions.c		\
