2004-04-19  Sven Neumann  <sven@gimp.org>
	* menus/Makefile.am
	* menus/gtkuimanager.dtd: added a DTD (basically copied from the
	GTK+ API docs). Added a "validate" rule that allows to easily
	validate the XML files.

	* menus/*.xml: added a DOCTYPE declaration that refers to the
	newly added DTD.

	* app/widgets/gimpenumstore.[ch]:
	* app/widgets/gimpenumcombobox.c: documented the new API.


git-svn-id: http://svn.gnome.org/svn/gimp/trunk@13019 f57ce169-c725-0410-9505-c4955b3f21d2

--- a/menus/Makefile.am
+++ b/menus/Makefile.am
@@ -23,4 +23,20 @@ menudata_DATA = \
 	toolbox-menu.xml		\
 	vectors-menu.xml
 
-EXTRA_DIST = $(menudata_DATA)
+EXTRA_DIST = \
+	$(menudata_DATA)		\
+	gtkuimanager.dtd
+
+
+validate: $(menudata_DATA)
+	@( xmllint=`which xmllint`; \
+	  if test x$$xmllint != x && test -x $$xmllint; then \
+	    for menu in $(menudata_DATA); do \
+	      $$xmllint --noout --valid $$menu || \
+	      ( echo "* $$menu INVALID *"; exit 1; ) ; \
+	    done; \
+	  else \
+	    echo "Can't find xmllint to validate the menu files; proceed with fingers crossed..."; \
+	  fi )
+
+dist-hook: validate
