--- a/devel-docs/app/Makefile.am
+++ b/devel-docs/app/Makefile.am
@@ -73,6 +73,7 @@ GTKDOC_LIBS = \
         $(top_builddir)/app/units.o					     \
         $(top_builddir)/app/config/libappconfig.a			     \
         $(top_builddir)/app/gui/libappgui.a				     \
+	$(top_builddir)/app/actions/libappactions.a			     \
         $(top_builddir)/app/display/libappdisplay.a			     \
         $(top_builddir)/app/tools/libapptools.a				     \
         $(top_builddir)/app/widgets/libappwidgets.a			     \
