2004-04-19  Sven Neumann  <sven@gimp.org>
	* app/Makefile.am
	* app/app-docs.sgml
	* app/app-sections.txt: merged update from stable branch.


git-svn-id: http://svn.gnome.org/svn/gimp/trunk@13025 f57ce169-c725-0410-9505-c4955b3f21d2

--- a/devel-docs/app/Makefile.am
+++ b/devel-docs/app/Makefile.am
@@ -36,6 +36,7 @@ IGNORE_HFILES = \
 	gimp-composite-sse2.h		\
 	gimp-composite-vis.h		\
 	gimp-composite-x86.h		\
+	gimp-intl.h			\
 	gimpimage-convert-data.h	\
 	gimpimage-convert-fsdither.h	\
 	gimphelp-ids.h			\
