2004-04-19  Michael Natterer  <mitch@gimp.org>
	* menus/Makefile.am
	* menus/image-menu.xml
	* menus/tool-options-menu.xml: more menus.


git-svn-id: http://svn.gnome.org/svn/gimp/trunk@13027 f57ce169-c725-0410-9505-c4955b3f21d2

--- a/menus/Makefile.am
+++ b/menus/Makefile.am
@@ -13,6 +13,7 @@ menudata_DATA = \
 	fonts-menu.xml			\
 	gradient-editor-menu.xml	\
 	gradients-menu.xml		\
+	image-menu.xml			\
 	images-menu.xml			\
 	layers-menu.xml			\
 	palette-editor-menu.xml		\
@@ -20,6 +21,7 @@ menudata_DATA = \
 	patterns-menu.xml		\
 	qmask-menu.xml			\
 	templates-menu.xml		\
+	tool-options-menu.xml		\
 	toolbox-menu.xml		\
 	vectors-menu.xml
 
