2004-04-20  Michael Natterer  <mitch@gimp.org>
	* app/gui/convert-dialog.[ch]: renamed convert_to_indexed()
	to convert_dialog_new() and return the dialog. Removed
	convert_to_rgb() and convert_to_grayscale().

	* app/gui/offset-dialog.[ch]: renamed offset_dialog_create()
	to offset_dialog_new() and return the dialog.

	* app/Makefile.am
	* app/actions/drawable-commands.c
	* app/actions/image-commands.c: changed accordingly.


git-svn-id: http://svn.gnome.org/svn/gimp/trunk@13037 f57ce169-c725-0410-9505-c4955b3f21d2

--- a/app/Makefile.am
+++ b/app/Makefile.am
@@ -81,11 +81,11 @@ gimp_2_1_LDFLAGS = \
 	-u $(SYMPREFIX)gimp_xml_parser_new		\
 	-u $(SYMPREFIX)gimp_drawable_stroke_vectors	\
 	\
-	-u $(SYMPREFIX)convert_to_indexed		\
+	-u $(SYMPREFIX)convert_dialog_new		\
 	-u $(SYMPREFIX)grid_dialog_new			\
 	-u $(SYMPREFIX)info_dialog_new			\
 	-u $(SYMPREFIX)info_window_create		\
-	-u $(SYMPREFIX)offset_dialog_create		\
+	-u $(SYMPREFIX)offset_dialog_new		\
 	-u $(SYMPREFIX)palette_import_dialog_show	\
 	-u $(SYMPREFIX)resize_widget_new		\
 	-u $(SYMPREFIX)stroke_dialog_new		\
