2004-04-20  Sven Neumann  <sven@gimp.org>
	* libgimpwidgets/Makefile.am
	* libgimpwidgets/gimpwidgets.h
	* libgimpwidgets/gimpwidgetstypes.h
	* libgimpwidgets/gimpintstore.[ch]: added a GimpIntStore, derived
	from GtkListStore, to be used by GimpIntComboBox and also by the
	image and drawable menus.

	* libgimpwidgets/gimpintcombobox.c: use the new GimpIntStore.

	* app/widgets/gimpenumstore.[ch]: derive from GimpIntStore,
	removed API that is provided by the parent class.

	* app/widgets/gimpenumcombobox.[ch]: derive from GimpIntComboBox,
	removed API that is provided by the parent class.

	* app/gui/resize-dialog.c
	* app/tools/gimpcurvestool.c
	* app/tools/gimplevelstool.c
	* app/widgets/gimpcolorframe.c
	* app/widgets/gimphistogrameditor.c
	* app/widgets/gimppropwidgets.c
	* app/widgets/gimpstrokeeditor.c: changed accordingly.


git-svn-id: http://svn.gnome.org/svn/gimp/trunk@13044 f57ce169-c725-0410-9505-c4955b3f21d2

--- a/libgimpwidgets/Makefile.am
+++ b/libgimpwidgets/Makefile.am
@@ -94,6 +94,8 @@ libgimpwidgets_2_0_la_sources = \
 	gimphelpui.h		\
 	gimpintcombobox.c	\
 	gimpintcombobox.h	\
+	gimpintstore.c		\
+	gimpintstore.h		\
 	gimpmemsizeentry.c	\
 	gimpmemsizeentry.h	\
 	gimpoldwidgets.c	\
@@ -151,6 +153,7 @@ libgimpwidgetsinclude_HEADERS = \
 	gimpfileentry.h		\
 	gimphelpui.h		\
 	gimpintcombobox.h	\
+	gimpintstore.h		\
 	gimpmemsizeentry.h	\
 	gimpoldwidgets.h	\
 	gimpoffsetarea.h	\
