2004-04-21  Sven Neumann  <sven@gimp.org>
	* libgimp/Makefile.am
	* libgimp/gimpui.h
	* libgimp/gimppixbuf.[ch]: new file that holds pixbuf accessors
	to gimp data (drawable and image thumbnails for now).

	* libgimp/gimpdrawablecombobox.[ch]
	* libgimp/gimpimagecombobox.[ch]: new files with GimpIntComboBox
	constructors for image, drawable, channel and layer menus.

	* plug-ins/script-fu/script-fu-scripts.c: use the new functions
	instead of the gimpmenu API that is about to be deprecated.


git-svn-id: http://svn.gnome.org/svn/gimp/trunk@13048 f57ce169-c725-0410-9505-c4955b3f21d2

--- a/libgimp/Makefile.am
+++ b/libgimp/Makefile.am
@@ -206,6 +206,12 @@ libgimpui_2_0_la_SOURCES = \
 	gimpgradientmenu.h 	\
 	gimppatternmenu.c	\
 	gimppatternmenu.h	\
+	gimpdrawablecombobox.c	\
+	gimpdrawablecombobox.h	\
+	gimpimagecombobox.c	\
+	gimpimagecombobox.h	\
+	gimppixbuf.c		\
+	gimppixbuf.h		\
 	gimpexport.c		\
 	gimpexport.h
 
@@ -230,14 +236,17 @@ gimpinclude_HEADERS = \
 	gimpselection.h		\
 	gimptile.h		\
 	\
-	gimpexport.h		\
 	gimpui.h		\
 	gimpuitypes.h		\
 	gimpmenu.h		\
 	gimpbrushmenu.h		\
 	gimpfontmenu.h		\
 	gimpgradientmenu.h	\
-	gimppatternmenu.h
+	gimppatternmenu.h	\
+	gimppixbuf.h		\
+	gimpdrawablecombobox.h	\
+	gimpimagecombobox.h	\
+	gimpexport.h
 
 libgimp_2_0_la_LDFLAGS = \
 	-version-info $(LT_VERSION_INFO)	\
