2004-04-21  Sven Neumann  <sven@gimp.org>
	* libgimp/gimpmenu.c (gimp_menu_add_none): use the same label as
	in the new combo_box widgets.

	* libgimpwidgets/gimpintcombobox.[ch]
	* libgimpwidgets/gimpintstore.[ch]: use LibGIMP copyright headers.


git-svn-id: http://svn.gnome.org/svn/gimp/trunk@13055 f57ce169-c725-0410-9505-c4955b3f21d2

--- a/po-libgimp/POTFILES.in
+++ b/po-libgimp/POTFILES.in
@@ -2,9 +2,11 @@
 # marked to allow runtime translation of messages
 
 libgimp/gimpbrushmenu.c
+libgimp/gimpdrawablecombobox.c
 libgimp/gimpexport.c
 libgimp/gimpfontmenu.c
 libgimp/gimpgradientmenu.c
+libgimp/gimpimagecombobox.c
 libgimp/gimpmenu.c
 libgimp/gimppatternmenu.c
 libgimp/gimpunitcache.c
