2004-04-29  Michael Natterer  <mitch@gimp.org>
	* app/actions/Makefile.am
	* app/actions/file-open-actions.[ch]
	* app/actions/file-save-actions.[ch]: actions for the <Load> and
	<Save> menus...

	* menus/Makefile.am
	* menus/file-open-menu.xml
	* menus/file-save-menu.xml: ...and the menus.

	* app/gui/file-open-menu.[ch]
	* app/gui/file-save-menu.[ch]: ported to UI Manager.

	* app/widgets/gimpfiledialog.[ch]: ditto.

	* app/actions/actions.c
	* app/gui/menus.c
	* app/gui/file-open-dialog.c
	* app/gui/file-save-dialog.c: changed accordingly.

	* app/widgets/gimpuimanager.c: removed debugging code which
	automatically loaded all registered menus. They are now loaded on


git-svn-id: http://svn.gnome.org/svn/gimp/trunk@13093 f57ce169-c725-0410-9505-c4955b3f21d2

--- a/app/actions/Makefile.am
+++ b/app/actions/Makefile.am
@@ -55,6 +55,12 @@ libappactions_a_SOURCES = \
 	file-actions.h			\
 	file-commands.c			\
 	file-commands.h			\
+	file-open-actions.c		\
+	file-open-actions.h		\
+	file-save-actions.c		\
+	file-save-actions.h		\
+	file-commands.c			\
+	file-commands.h			\
 	fonts-actions.c			\
 	fonts-actions.h			\
 	fonts-commands.c		\
