2004-05-02  Sven Neumann  <sven@gimp.org>
	* menus/Makefile.am: added a rule to generate gtkuimanager XML
	files using an XSL transformation.

	* menus/menus.xsl: a simple XSLT to generate a menubar and a popup
	menu with identical content.

	* menus/image-menu.xml: removed this file from CVS ...

	* menus/image-menu.xml.in: ... and added this instead.

	* HACKING: xsltproc is now needed to build from CVS.


git-svn-id: http://svn.gnome.org/svn/gimp/trunk@13102 f57ce169-c725-0410-9505-c4955b3f21d2

--- a/menus/Makefile.am
+++ b/menus/Makefile.am
@@ -2,7 +2,12 @@
 
 menudatadir = $(gimpdatadir)/menus
 
+menudata_in_files = image-menu.xml.in
+
+menudata_built_files = $(menudata_in_files:.xml.in=.xml)
+
 menudata_DATA = \
+	$(menudata_built_files)		\
 	brushes-menu.xml		\
 	buffers-menu.xml		\
 	channels-menu.xml		\
@@ -15,7 +20,6 @@ menudata_DATA = \
 	fonts-menu.xml			\
 	gradient-editor-menu.xml	\
 	gradients-menu.xml		\
-	image-menu.xml			\
 	images-menu.xml			\
 	layers-menu.xml			\
 	palette-editor-menu.xml		\
@@ -29,7 +33,18 @@ menudata_DATA = \
 
 EXTRA_DIST = \
 	$(menudata_DATA)		\
-	gtkuimanager.dtd
+	gtkuimanager.dtd		\
+	menus.xsl
+
+MAINTAINERCLEAN_FILES = $(menudata_built_files)
+
+
+%.xml: %.xml.in menus.xsl
+if HAVE_XSLTPROC
+	$(XSLTPROC) menus.xsl $< > $(@) || rm -f $(@)
+else
+	@echo "xsltproc is needed to build the menus XML files"; exit 1;
+endif
 
 
 validate: $(menudata_DATA)
