2004-05-02  Sven Neumann  <sven@gimp.org>
	* menus/Makefile.am
	* menus/dialogs-menuitems.xml: new file that holds menuitems that
	appear in several places.

	* menus/dockable-menu.xml.in: new file used to generate
	dockable-menu.xml.

	* menus/toolbox-menu.xml.in: new file used to generate
	toolbox-menu.xml.

	* menus/image-menu.xml.in: include dialogs-menuitems.xml.

	* menus/menus.xsl: allow inclusion of menuitems using XInclude.


git-svn-id: http://svn.gnome.org/svn/gimp/trunk@13105 f57ce169-c725-0410-9505-c4955b3f21d2

--- a/menus/Makefile.am
+++ b/menus/Makefile.am
@@ -2,7 +2,10 @@
 
 menudatadir = $(gimpdatadir)/menus
 
-menudata_in_files = image-menu.xml.in
+menudata_in_files = \
+	dockable-menu.xml.in	\
+	image-menu.xml.in	\
+	toolbox-menu.xml.in
 
 menudata_built_files = $(menudata_in_files:.xml.in=.xml)
 
@@ -12,7 +15,6 @@ menudata_DATA = \
 	buffers-menu.xml		\
 	channels-menu.xml		\
 	colormap-editor-menu.xml	\
-	dockable-menu.xml		\
 	documents-menu.xml		\
 	error-console-menu.xml		\
 	file-open-menu.xml		\
@@ -28,20 +30,21 @@ menudata_DATA = \
 	qmask-menu.xml			\
 	templates-menu.xml		\
 	tool-options-menu.xml		\
-	toolbox-menu.xml		\
 	vectors-menu.xml
 
 EXTRA_DIST = \
 	$(menudata_DATA)		\
+	$(menudata_in_files)		\
+	dialogs-menuitems.xml		\
 	gtkuimanager.dtd		\
 	menus.xsl
 
 MAINTAINERCLEAN_FILES = $(menudata_built_files)
 
 
-%.xml: %.xml.in menus.xsl
+%.xml: %.xml.in menus.xsl dialogs-menuitems.xml
 if HAVE_XSLTPROC
-	$(XSLTPROC) menus.xsl $< > $(@) || rm -f $(@)
+	$(XSLTPROC) --xinclude menus.xsl $< > $(@) || rm -f $(@)
 else
 	@echo "xsltproc is needed to build the menus XML files"; exit 1;
 endif
