--- a/menus/toolbox-menu.xml.in
+++ b/menus/toolbox-menu.xml.in
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
-<!DOCTYPE ui SYSTEM "gtkuimanager.dtd">
 
-<ui>
+<ui xmlns:xi="http://www.w3.org/2001/XInclude">
+
   <menubar action="toolbox-menubar">
 
     <menu action="file-menu" name="File">
@@ -22,31 +22,7 @@
           <menuitem action="dialogs-new-dock-data" />
           <menuitem action="dialogs-new-dock-stuff" />
         </menu>
-        <menuitem action="dialogs-tool-options" />
-	<menuitem action="dialogs-device-status" />
-	<separator />
-        <menuitem action="dialogs-layers" />
-        <menuitem action="dialogs-channels" />
-        <menuitem action="dialogs-vectors" />
-        <menuitem action="dialogs-indexed-palette" />
-        <menuitem action="dialogs-histogram" />
-        <menuitem action="dialogs-selection-editor" />
-        <menuitem action="dialogs-navigation" />
-        <menuitem action="dialogs-undo-history" />
-        <separator />
-        <menuitem action="dialogs-colors" />
-        <menuitem action="dialogs-brushes" />
-        <menuitem action="dialogs-patterns" />
-        <menuitem action="dialogs-gradients" />
-        <menuitem action="dialogs-palettes" />
-        <menuitem action="dialogs-fonts" />
-        <menuitem action="dialogs-buffers" />
-        <separator />
-        <menuitem action="dialogs-images" />
-        <menuitem action="dialogs-document-history" />
-        <menuitem action="dialogs-templates" />
-        <menuitem action="dialogs-tools" />
-        <menuitem action="dialogs-error-console" />
+        <xi:include href="dialogs-menuitems.xml" />
       </menu>
       <menu action="debug-menu" name="Debug">
         <menuitem action="debug-mem-profile" />
