--- a/menus/image-menu.xml.in
+++ b/menus/image-menu.xml.in
@@ -72,7 +72,7 @@
       <menuitem action="select-grow" />
       <menuitem action="select-border" />
       <separator />
-      <menuitem action="select-toggle-qmask" />
+      <menuitem action="qmask-toggle" />
       <menuitem action="select-save" />
       <menuitem action="select-to-vectors" />
     </menu>
