2004-05-02  Sven Neumann  <sven@gimp.org>
	* libgimpwidgets/Makefile.am
	* libgimpwidgets/gimpwidgets.h
	* libgimpwidgets/gimpwidgetstypes.h
	* libgimpwidgets/gimpframe.[ch]: added new widget GimpFrame, a HIG
	compliant variant of GtkFrame.

	* app/gui/preferences-dialog.c: enable the HIG compliant mode by
	default and use the new GimpFrame widget for it.

	* themes/Small/gtkrc: set a smaller spacing between the GimpFrame
	title label and the frame content.

2004-05-02  Sven Neumann  <sven@gimp.org>

	* libgimpwidgets/libgimpwidgets-docs.sgml
	* libgimpwidgets/libgimpwidgets-sections.txt
	* libgimpwidgets/libgimpwidgets.types
	* libgimpwidgets/tmpl/gimpframe.sgml: added docs for GimpFrame.

	* */tmpl/*.sgml: regenerated using gtk-doc-tools version 1.2.


git-svn-id: http://svn.gnome.org/svn/gimp/trunk@13109 f57ce169-c725-0410-9505-c4955b3f21d2

--- a/libgimpwidgets/Makefile.am
+++ b/libgimpwidgets/Makefile.am
@@ -90,6 +90,8 @@ libgimpwidgets_2_0_la_sources = \
 	gimpdialog.h		\
 	gimpfileentry.c		\
 	gimpfileentry.h		\
+	gimpframe.c		\
+	gimpframe.h		\
 	gimphelpui.c		\
 	gimphelpui.h		\
 	gimpintcombobox.c	\
@@ -151,6 +153,7 @@ libgimpwidgetsinclude_HEADERS = \
 	gimpcolorselection.h	\
 	gimpdialog.h		\
 	gimpfileentry.h		\
+	gimpframe.h		\
 	gimphelpui.h		\
 	gimpintcombobox.h	\
 	gimpintstore.h		\
