2004-05-03  Sven Neumann  <sven@gimp.org>
	* POTFILES.in: added missing files.


git-svn-id: http://svn.gnome.org/svn/gimp/trunk@13117 f57ce169-c725-0410-9505-c4955b3f21d2

--- a/po/POTFILES.in
+++ b/po/POTFILES.in
@@ -4,40 +4,55 @@
 app/app_procs.c
 app/main.c
 
-app/actions/debug-actions.c
 app/actions/brushes-actions.c
 app/actions/buffers-actions.c
 app/actions/channels-actions.c
+app/actions/channels-commands.c
 app/actions/colormap-editor-actions.c
+app/actions/debug-actions.c
 app/actions/dialogs-actions.c
 app/actions/dockable-actions.c
 app/actions/documents-actions.c
 app/actions/drawable-actions.c
+app/actions/drawable-commands.c
 app/actions/edit-actions.c
+app/actions/edit-commands.c
 app/actions/error-console-actions.c
 app/actions/file-actions.c
+app/actions/file-commands.c
 app/actions/file-open-actions.c
 app/actions/file-save-actions.c
 app/actions/fonts-actions.c
 app/actions/gradient-editor-actions.c
+app/actions/gradient-editor-commands.c
 app/actions/gradients-actions.c
+app/actions/gradients-commands.c
 app/actions/help-actions.c
 app/actions/image-actions.c
+app/actions/image-commands.c
 app/actions/images-actions.c
 app/actions/layers-actions.c
+app/actions/layers-commands.c
 app/actions/palette-editor-actions.c
 app/actions/palettes-actions.c
+app/actions/palettes-commands.c
 app/actions/patterns-actions.c
-app/actions/qmask-actions.c
-app/actions/select-actions.c
-app/actions/templates-actions.c
-app/actions/tool-options-actions.c
-app/actions/vectors-actions.c
-app/actions/view-actions.c
-app/actions/tools-actions.c
 app/actions/plug-in-actions.c
+app/actions/qmask-actions.c
+app/actions/qmask-commands.c
+app/actions/select-actions.c
+app/actions/select-commands.c
+app/actions/templates-actions.c
+app/actions/templates-commands.c
+app/actions/tool-options-actions.c
+app/actions/tool-options-commands.c
+app/actions/tools-actions.c
+app/actions/vectors-actions.c
+app/actions/vectors-commands.c
+app/actions/view-actions.c
 
 app/base/base-enums.c
+app/base/tile-swap.c
 
 app/config/gimpconfig-deserialize.c
 app/config/gimpconfig-path.c
@@ -250,6 +265,7 @@ app/vectors/gimpvectors.c
 app/vectors/gimpvectors-export.c
 app/vectors/gimpvectors-import.c
 
+app/widgets/gimpactiongroup.c
 app/widgets/gimpbrusheditor.c
 app/widgets/gimpbrushfactoryview.c
 app/widgets/gimpbufferview.c
