2004-05-05  Michael Natterer  <mitch@gimp.org>
	* app/actions/select-actions.c: removed action "select-by-color".

	* app/tools/gimpbycolorselecttool.c: add the shortcut here.

	* app/actions/tools-actions.c: added alternative tool actions for
	"by-color-select" and "rotate" which are identical to the ones
	generated from the GimpToolInfo except for their label. Make sure
	they have the same accelerators as the generated ones.

	* menus/image-menu.xml.in: use the alternative actions for
	"<Image>/Select/By Color" and
	"<Layer>/Transform/Arbitrary Rotation...".


git-svn-id: http://svn.gnome.org/svn/gimp/trunk@13154 f57ce169-c725-0410-9505-c4955b3f21d2

--- a/menus/image-menu.xml.in
+++ b/menus/image-menu.xml.in
@@ -64,7 +64,7 @@
       <menuitem action="select-invert" />
       <menuitem action="select-from-vectors" />
       <menuitem action="select-float" />
-      <menuitem action="select-by-color" />
+      <menuitem action="tools-by-color-select-short" />
       <separator />
       <menuitem action="select-feather" />
       <menuitem action="select-sharpen" />
@@ -209,6 +209,7 @@
         <menuitem action="drawable-rotate-90" />
         <menuitem action="drawable-rotate-270" />
         <menuitem action="drawable-rotate-180" />
+        <menuitem action="tools-rotate-arbitrary" />
 	<separator />
         <menuitem action="drawable-offset" />
       </menu>
